--- a/app/src/main/res/layout/item_fragments.xml
+++ b/app/src/main/res/layout/item_fragments.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp">
@@ -18,26 +17,24 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <EditText
+            <TextView
                 android:id="@+id/item_edt_materia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:background="@drawable/background_edit_text"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:gravity="center"
-                android:hint="Digite o nome da matéria"
-                android:inputType="text"
-                android:maxLength="3"
-                android:paddingBottom="10dp"
+                android:text="Matéria"
                 android:textSize="16sp" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:orientation="horizontal">
 
                 <TableLayout
@@ -46,17 +43,73 @@
 
                     <TableRow
                         android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1°"
+                            android:textSize="12sp"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="NAC"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="AM"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="PS"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="MD"
+                            android:textSize="12sp" />
+
+
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1° SEM" />
 
                         <EditText
                             android:id="@+id/item_edt_nac"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
                             android:background="@drawable/background_edit_text"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
-                            android:padding="10dp" />
+                            android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_am"
@@ -66,7 +119,7 @@
                             android:background="@drawable/background_edit_text"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
-                            android:padding="10dp" />
+                            android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_ps"
@@ -76,7 +129,7 @@
                             android:background="@drawable/background_edit_text"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
-                            android:padding="10dp" />
+                            android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_md"
@@ -86,7 +139,164 @@
                             android:background="@drawable/background_edit_text"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
-                            android:padding="10dp" />
+                            android:padding="8dp" />
+
+
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="2° SEM" />
+
+                        <EditText
+                            android:id="@+id/item_edt_nac2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+                        <EditText
+                            android:id="@+id/item_edt_am2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+                        <EditText
+                            android:id="@+id/item_edt_ps2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+                        <EditText
+                            android:id="@+id/item_edt_md2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1°"
+                            android:textSize="12sp"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="PR"
+                            android:textSize="12sp" />
+
+                        <TextView
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="MP"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="EXA"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:inputType="numberDecimal"
+                            android:text="MF"
+                            android:textSize="12sp" />
+
+
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Situação" />
+
+                        <EditText
+                            android:id="@+id/item_edt_pr"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+                        <EditText
+                            android:id="@+id/item_edt_mp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+                        <EditText
+                            android:id="@+id/item_edt_exa"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
+
+                        <EditText
+                            android:id="@+id/item_edt_mf"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/background_edit_text"
+                            android:hint="0.0"
+                            android:inputType="numberDecimal"
+                            android:padding="8dp" />
 
 
                     </TableRow>
