--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/fiapp"
     android:gravity="center"
+    android:id="@+id/llayout"
     android:orientation="vertical"
     tools:context=".ui.activity.LoginActivity">
 
