--- a/app/src/main/res/layout/item_fragments.xml
+++ b/app/src/main/res/layout/item_fragments.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -32,7 +33,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:orientation="horizontal">
@@ -107,36 +107,43 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_am"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_ps"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_md"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
@@ -190,12 +197,27 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
 
                     </TableRow>
+                </TableLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <TableRow
                         android:layout_width="wrap_content"
@@ -212,7 +234,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
+                            android:layout_marginLeft="10dp"
                             android:gravity="center"
                             android:inputType="numberDecimal"
                             android:text="PR"
@@ -260,40 +282,48 @@
 
                         <EditText
                             android:id="@+id/item_edt_pr"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
+                            android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_mp"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_exa"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
 
                         <EditText
                             android:id="@+id/item_edt_mf"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/background_edit_text"
+                            android:enabled="false"
                             android:hint="0.0"
                             android:inputType="numberDecimal"
                             android:padding="8dp" />
