--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorMagenta">#FF4081</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorBlue">#0000ff</color>
 </resources>
